--- a/src/main/resources/templates/pizzas/show.html
+++ b/src/main/resources/templates/pizzas/show.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base Index</title>
+    <title>Pizzas Show</title>
     <th:block th:replace="~{fragments/head.html::bootstrap}" />  <!-- ~ :  Alt+126(numerini)-->
     <th:block th:replace="~{fragments/head.html::style_jsscript}" />
 </head>
-<body class="debug bg-success">
-
-    <h1>Home Page</h1>
+<body>
+    
+    <h1 th:text="${pizza.id}"></h1>
 
 </body>
 </html>
