--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -7,21 +7,23 @@
     <th:block th:replace="~{fragments/head.html::bootstrap}" />  <!-- ~ :  Alt+126(numerini)-->
     <th:block th:replace="~{fragments/head.html::style_jsscript}" />
 </head>
-<body class="debug bg-warning">
+<body class="debug ">
     
-    <h1></h1>
+    <header th:replace="~{fragments/layout::header}"/>
 
-    <div class="container">
+    <div class="container mt-4">
         <p th:if="${pizzas == null}" th:text="|non-existing pizzas!|" />
         <div class="row g-3" th:if="${pizzas.size() > 0}"> 
-            <div class="col-3" th:each="pizza : ${pizzas}">
-                <div class="card">
-                    <img th:src="@{ /images/pizzas/{img} (img=${pizza.picture}) }" alt="pizza image" class="card-image-top">
-                    <div class="card-body">
+            <div class="col-sm-6 col-md-4 col-lg-3" th:each="pizza : ${pizzas}">
+                <div class="card h-100">
+                    <div class="pizza-img d-flex justify-content-center align-items-center">
+                        <img th:src="@{ /images/pizzas/{img} (img=${pizza.picture}) }" alt="pizza image" class="card-image-top ">
+                    </div>
+                    <div class="card-body d-flex flex-column position-relative" style="padding-bottom: 3rem;">
                         <h4 th:text="${pizza.id}" class="fs-6 mb-2"  />
-                        <h2 th:text="${pizza.name}" class="card-title"/>
-                        <p th:text="${pizza.content}" class="card-text"/>
-                        <a th:href="@{pizzas/{id} (id=${pizza.id} )}" class="btn btn-success">View more</a>
+                        <h2 th:text="${pizza.name}" class="card-title" />
+                        <p th:text="${pizza.content}" class="card-text" />
+                        <a th:href="@{pizzas/{id}(id=${pizza.id} )}" class="btn bg-green position-absolute " style="bottom: 1rem; right:1rem;">View more</a>
                     </div>
                 </div>
             </div>
