--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -2,7 +2,7 @@
 
 <header th:fragment="header">
     <nav class="navbar navbar-expand-lg top-0 end-0"
-        th:classappend="${page == 'home' ? 'navbar-custom-mp  position-absolute' : 'd-flex justify-content-end  container'}">
+        th:classappend="${page == 'home' ? 'navbar-custom-mp  position-absolute' : 'd-flex justify-content-end  container text-white-important'}">
 
         <div class="container-fluid d-flex"
             th:classappend="${page == 'home' ? '' : 'justify-content-end'}">
