--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,68 +7,10 @@
     <th:block th:replace="~{fragments/head.html::bootstrap}" />  <!-- ~ :  Alt+126(numerini)-->
     <th:block th:replace="~{fragments/head.html::style_jsscript}" />
 </head>
-<body class=" bg-success">
+<body class="debug ">
 
 
     <section class="hero-section d-flex align-items-center justify-content-center">
-
-        <!-- <header>
-            <nav class="navbar navbar-expand-lg position-absolute top-0 end-0" style="margin: 1.1rem 3.2rem 0 0;" th:fragment="navbar">
-                <div class="container-fluid">
-                    
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-            
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link text-decoration-underline" th:href="@{/pizzas}">Pizzas</a>
-                            </li>
-            
-                            <li class="nav-item position-relative">
-                                <a class="nav-link text-decoration-underline" href="#" id="geoLink">
-                                    Geolocalization
-                                </a>
-                                <div id="geoPopup" class="position-absolute bg-white shadow p-2 rounded"
-                                    style="display: none; z-index: 100;">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!4v1742497147646!6m8!1m7!1sCAoSF0NJSE0wb2dLRUlDQWdJQ0VxOGlJaFFF!2m2!1d44.30314321558385!2d9.209865628730391!3f208.0452082263748!4f9.071459558692368!5f0.7820865974627469" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                                    </iframe>
-                                </div>
-                            </li>
-            
-                            <li class="nav-item">
-                                <a class="nav-link text-decoration-underline" href="#">Order now</a>
-                            </li>
-            
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="specialEventsDropdown" role="button" data-bs-toggle="dropdown">
-                                    Special events
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="specialEventsDropdown">
-                                    <li><a class="dropdown-item" href="#">Karaoke Night</a></li>
-                                    <li><a class="dropdown-item" href="#">Gender Reveal Party</a></li>
-                                    <li><a class="dropdown-item" href="#">Beach Lights Party</a></li>
-                                </ul>
-                            </li>
-            
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown">
-                                    More options
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                                    <li><a class="dropdown-item" href="#">Login</a></li>
-                                    <li><a class="dropdown-item" href="#">Eat & Earn Card</a></li>
-                                    <li><a class="dropdown-item" href="#">Merchandising</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-            
-                </div>
-            </nav>
-        </header>  -->
-
         
         <header th:replace="~{fragments/layout::header}"/>
 
@@ -79,6 +21,40 @@
         </div>
     </section>
 
+
+    <div class="container2">
+
+        <section class="mt-4 row d-flex rounded" style="background-color: #EAEAEA;">
+            <div class="col-7 home-img p-3">
+                <img th:src="@{/images/index/inheritance.jpg}" alt="" class="rounded">
+            </div>
+            <div class="col-5" style="padding: 2rem 2rem 2rem 1rem;">
+                <h1>Our Inheritance</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt officiis voluptatibus sunt velit atque blanditiis exercitationem ratione placeat tenetur, eaque, aspernatur nemo nobis dolores doloribus repellendus beatae tempore! Perspiciatis, corrupti?</p>
+            </div>
+        </section>
+
+        <section class="mt-4 row d-flex rounded" style="background-color: #EAEAEA;">
+            <div class="col-5" style="padding: 2rem 1rem 2rem 2rem;">
+                <h1>The best flavor for everyone</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt officiis voluptatibus sunt velit atque blanditiis exercitationem ratione placeat tenetur, eaque, aspernatur nemo nobis dolores doloribus repellendus beatae tempore! Perspiciatis, corrupti?</p>
+            </div>
+            <div class="col-7 home-img p-3">
+                <img th:src="@{/images/index/3girls.jpg}" alt="" class="rounded">
+            </div>
+        </section>
+
+        <section class="mt-4  mb-2 row d-flex rounded" style="background-color: #EAEAEA;">
+            <div class="col-7 home-img p-3 d-flex align-items-end">
+                <img th:src="@{/images/index/staff2.jpg}" alt="" class="rounded">
+            </div>
+            <div class="col-5" style="padding: 2rem 2rem 2rem 1rem;">
+                <h1>Our Staff</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt officiis voluptatibus sunt velit atque blanditiis exercitationem ratione placeat tenetur, eaque, aspernatur nemo nobis dolores doloribus repellendus beatae tempore! Perspiciatis, corrupti?</p>
+            </div>
+        </section>
+
+    </div>
 
 
 </body>
