--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -7,11 +7,11 @@
     <th:block th:replace="~{fragments/head.html::bootstrap}" />  <!-- ~ :  Alt+126(numerini)-->
     <th:block th:replace="~{fragments/head.html::style_jsscript}" />
 </head>
-<body class="debug ">
+<body class=" pizzas-bg">
     
     <header th:replace="~{fragments/layout::header}"/>
 
-    <div class="container mt-4">
+    <article class="container mt-4 mb-4">
         <p th:if="${pizzas == null}" th:text="|non-existing pizzas!|" />
         <div class="row g-3" th:if="${pizzas.size() > 0}"> 
             <div class="col-sm-6 col-md-4 col-lg-3" th:each="pizza : ${pizzas}">
@@ -19,20 +19,31 @@
                     <div class="pizza-img d-flex justify-content-center align-items-center">
                         <img th:src="@{ /images/pizzas/{img} (img=${pizza.picture}) }" alt="pizza image" class="card-image-top ">
                     </div>
-                    <div class="card-body d-flex flex-column position-relative" style="padding-bottom: 3rem;">
-                        <h4 th:text="${pizza.id}" class="fs-6 mb-2"  />
+                    <div class="card-body d-flex flex-column position-relative" style="padding-bottom: 3.3rem;">
+                        <h4 th:text="${pizza.id}" class="fs-6 mb-1"  />
                         <h2 th:text="${pizza.name}" class="card-title" />
-                        <p th:text="${pizza.content}" class="card-text" />
-                        <a th:href="@{pizzas/{id}(id=${pizza.id} )}" class="btn bg-green position-absolute " style="bottom: 1rem; right:1rem;">View more</a>
+                        <p th:text="${pizza.content}" class="card-text" style="margin-top: -0.2rem;" />
+                        <div class="position-absolute" style="bottom: 1rem; right:1rem;">
+                            <a href="#" class="btn bg-orange">Order online</a>
+                            <a th:href="@{pizzas/{id}(id=${pizza.id} )}" class="btn bg-green  " >View more</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <p th:unless="${pizzas.size() > 0}" th:text="|No pizza found, pizzas existing.|" />
-    </div>
+    </article>
 
-    <!-- <h2 th:if="${bestmovies != null}" th:text="|Best movies: ${bestmovies}|"></h2> -->
+    <footer class="footer-img">
+        <div >
+            <div class="col-5">
+                
+            </div>
+            <div class="col-7">
 
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
