--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,17 +24,17 @@
 
     <div class="container2">
 
-        <section class="mt-4 row d-flex rounded" style="background-color: #EAEAEA;">
+        <section class="mt-4 row d-flex rounded bg-gray">
             <div class="col-7 home-img p-3">
                 <img th:src="@{/images/index/inheritance.jpg}" alt="" class="rounded">
             </div>
             <div class="col-5" style="padding: 2rem 2rem 2rem 1rem;">
-                <h1>Our Inheritance</h1>
+                <h1>Our Heritage</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt officiis voluptatibus sunt velit atque blanditiis exercitationem ratione placeat tenetur, eaque, aspernatur nemo nobis dolores doloribus repellendus beatae tempore! Perspiciatis, corrupti?</p>
             </div>
         </section>
 
-        <section class="mt-4 row d-flex rounded" style="background-color: #EAEAEA;">
+        <section class="mt-4 row d-flex rounded bg-gray">
             <div class="col-5" style="padding: 2rem 1rem 2rem 2rem;">
                 <h1>The best flavor for everyone</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt officiis voluptatibus sunt velit atque blanditiis exercitationem ratione placeat tenetur, eaque, aspernatur nemo nobis dolores doloribus repellendus beatae tempore! Perspiciatis, corrupti?</p>
@@ -44,7 +44,7 @@
             </div>
         </section>
 
-        <section class="mt-4  mb-2 row d-flex rounded" style="background-color: #EAEAEA;">
+        <section class="mt-4  mb-2 row d-flex rounded bg-gray">
             <div class="col-7 home-img p-3 d-flex align-items-end">
                 <img th:src="@{/images/index/staff2.jpg}" alt="" class="rounded">
             </div>
@@ -54,6 +54,12 @@
             </div>
         </section>
 
+    </div>
+
+    <div class="container">
+        <form action="">
+            
+        </form>
     </div>
 
 
