--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -2,10 +2,14 @@
 
 <header th:fragment="header">
     <nav class="navbar navbar-expand-lg top-0 end-0"
-        th:classappend="${page == 'home' ? 'navbar-custom-mp  position-absolute' : 'd-flex justify-content-end  container text-white-important'}">
+        th:classappend="${page == 'home' ? 'navbar-custom-mp  position-absolute' : 'd-flex justify-content-end  container text-white-important mb-3'}">
 
         <div class="container-fluid d-flex"
             th:classappend="${page == 'home' ? '' : 'justify-content-end'}">
+
+            <a th:if="${page != 'home'}" th:href="@{/}" class="navbar-brand">
+                <img src="/images/logo.png" alt="Logo" width="100" height="auto">
+            </a>
 
             <!-- Mobile Navbar Toggle Button -->
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -20,7 +24,7 @@
     
                     <li class="nav-item position-relative">
                         <a class="nav-link text-decoration-underline" href="#" id="geoLink">
-                            Geolocalization
+                            Geolocation
                         </a>
                         <div id="geoPopup" class="position-absolute bg-white shadow p-2 rounded"
                             style="display: none; z-index: 100;">
