--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <th:block th:replace="~{fragments/head.html::bootstrap}" />  <!-- ~ :  Alt+126(numerini)-->
     <th:block th:replace="~{fragments/head.html::style_jsscript}" />
 </head>
-<body class="debug ">
+<body class=" ">
 
 
     <section class="hero-section d-flex align-items-center justify-content-center">
@@ -56,12 +56,55 @@
 
     </div>
 
-    <div class="container">
-        <form action="">
+    <div class="container3">
+        <form id="review-form" th:action="@{/}" method="post" th:object="${review}" class="card rounded p-4">  <!--better using th:object x POST actions-->
             
+            <!-- <div th:if="${#fields.hasErrors()}">   don't delete this comment
+                <ul class="alert alert-danger">
+                    <li th:each="error: ${#fields.allErrors()}" th:text="${error}" />
+                </ul>
+            </div> -->
+            
+            <h3 class="fs-2">Post Review</h3>
+            <div class="form-group mb-2">
+                <label for="title" class="form-label">Title</label>
+                <input type="text" class="form-control" name="title" id="title" placeholder="Title"
+                th:field="*{title}" th:errorClass="is-invalid">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}">
+                    <ul>
+                        <li th:each="error : ${#fields.errors('title')}" th:text="${error}" />
+                    </ul>
+                </div>
+            </div>
+            <div class="form-group mb-2">
+                <label for="content" class="form-label">Content</label>
+                <textarea type="text" class="form-control" rows="4" name="content"  id="content" placeholder="Content" th:field="*{content}"></textarea>
+            </div>
+            <div class="text-start">
+                <button type="submit" class="btn btn-primary ">Submit</button>
+            </div>
         </form>
+
+        <article class="mt-2">
+            <h2>Reviews</h2>
+            <!-- <h3 th:if="${reviews == null}" th:text="|non-existing reviews!|" class="text-muted text-center" /> -->
+            <div class="row g-3" th:if="${not #lists.isEmpty(reviews)}">   <!--!BETTER than reviews.size()>0 -->
+                <div class="col-2" th:each="review : ${reviews}">
+                    <div class="card bg-gray">
+                        <div class="card-body">
+                            <h6 class="card-subtitle text-muted" th:text="${review.id}"/>
+                            <h5 class="card-title" th:text="${review.title}"/>
+                            <p class="card-text" th:text="${review.content}" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h4 th:if="${ #lists.isEmpty(reviews)}" th:text="|No reviews found.|" class="text-muted text-center" />  <!--replaced th:unless -->
+        </article>
+
+
     </div>
 
 
 </body>
-</html>
+</html>  
