--- a/src/main/resources/templates/pizzas/index.html
+++ b/src/main/resources/templates/pizzas/index.html
@@ -65,7 +65,7 @@
                                     <span class="btn-text   d-sm-inline d-md-inline d-lg-inline d-xl-inline">Add</span>  <!--d-none -->
                                     <i class="bi bi-plus-square-fill  d-sm-inline d-md-inline  d-lg-inline  d-xl-inline"></i>
                                 </a>
-                                <a th:href="@{pizzas/{id}(id=${pizza.id} )}" class="btn bg-green  " >
+                                <a th:href="@{/pizzas/{id}(id=${pizza.id} )}" class="btn bg-green  " >
                                     <span class="btn-text  d-xs-inline  d-sm-none d-md-inline  d-lg-inline d-xl-inline">View more</span>
                                     <i class="bi bi-info-circle-fill  d-none d-sm-inline d-md-none  d-lg-none  d-xl-none"></i>
                                 </a>
